# FrameSource

./: .gitignore  LICENSE  MANIFEST.in  example.py  pyproject.toml  readme.md  setup.py  tmp.py
examples/: README.md  audio_spectrogram_example.py  camera_360_example.py  fisheye_ptz_example.py  image_folder_example.py  industrial_cameras_example.py  ipcamera_example.py  multiple_cameras_example.py  realsense_example.py  run_examples.py  screen_capture_example.py  test_window_discovery.py  video_file_example.py  webcam_example.py
frame_processors/: __init__.py  equirectangular360_processor.py  fisheye2equirectangular_processor.py  frame_processor.py  hyperspectral_processor.py  realsense_depth_processor.py
frame_source/: __init__.py  audiospectrogram_capture.py  basler_capture.py  factory.py  folder_capture.py  genicam_capture.py  huateng_capture.py  ipcamera_capture.py  mvsdk.py  realsense_capture.py  screen_capture.py  threading_utils.py  video_capture_base.py  video_file_capture.py  webcam_capture.py  ximea_capture.py
src/: basler_capture.py  folder_capture.py  ipcamera_capture.py  video_capture_system.py  video_file_capture.py  webcam_capture.py  ximea_capture.py
tests/: test_grayscale.py  test_high_frequency.py  test_simple_external_threading.py  test_threading.py
